Updated home page for index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </body>
 
 <script> 
-location.href = "https://carlos9917.github.io/CERISE-Regional-Dem/spatial-verif/post-processing/exploration_carra_east.html"
+location.href = "https://cerise-regional-dem.github.io/spatial-verif/post-processing/exploration_carra_east.html"
 </script>
 </html>
 
